<resources>
    <string name="app_name">KotlinFirestore</string>
    <string name="cep">CEP</string>
    <string name="bairro">Bairro</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="enviar">Enviar</string>
    <string name="x">X</string>
    <string name="cancelar">cancelar</string>
    <string name="inserir">Inserir</string>
</resources>